# -2

./: .gitignore  README.md
neural-framework/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
neural-framework/core/: optimizers.py
neural-framework/data/: utils.py
neural-framework/web_demo/: app.py
